--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1182,7 +1182,7 @@ img {
   margin-left: 100%;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 320px) {
   .col-us-1 {
     -ms-flex: 0 0 8.3333333333%;
     -webkit-box-flex: 0;
@@ -3314,10 +3314,25 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  height: unset;
+  min-height: 100vh;
+}
+@media (max-width: 1366px) {
+  .screen-plans {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+@media (max-width: 1280px) {
+  .screen-plans {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 @media (max-width: 768px) {
   .screen-plans {
-    display: inherit;
     padding-top: 30px;
   }
 }
@@ -3352,6 +3367,12 @@ img {
 }
 @media (max-width: 768px) {
   .screen-plans-head {
+    gap: 20px;
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 480px) {
+  .screen-plans-head {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
@@ -3383,14 +3404,8 @@ img {
     font-size: 2.625rem;
   }
 }
-@media (max-width: 768px) {
-  .screen-plans-title {
-    margin-bottom: 30px;
-  }
-}
 @media (max-width: 480px) {
   .screen-plans-title {
-    margin-bottom: 20px;
     font-size: 36px;
     font-size: 2.25rem;
   }
@@ -3404,7 +3419,11 @@ img {
 @media (max-width: 768px) {
   .screen-plans-search {
     width: 100%;
-    margin-bottom: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .screen-plans-search {
+    width: 80%;
   }
 }
 .screen-plans-search input {
@@ -3451,15 +3470,22 @@ img {
     font-size: 1.0625rem;
   }
 }
-@media (max-width: 480px) {
+@media (max-width: 599px) {
   .screen-plans-search input {
-    height: 47px;
-    padding: 18px 10px;
-    border-radius: 8px 0px 0px 8px;
+    height: 50px;
     font-size: 14px;
     font-size: 0.875rem;
-    padding-left: 20px;
-    padding-right: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .screen-plans-search input {
+    height: 40px;
+    padding: 18px 10px;
+    border-radius: 8px 0px 0px 8px;
+    font-size: 11px;
+    font-size: 0.6875rem;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 .screen-plans-search input::-webkit-input-placeholder {
@@ -3558,6 +3584,50 @@ img {
     font-size: 1.0625rem;
   }
 }
+@media (max-width: 599px) {
+  .screen-plans-search input::-webkit-input-placeholder {
+    font-size: 14px;
+    font-size: 0.875rem;
+  }
+  .screen-plans-search input::-moz-placeholder {
+    font-size: 14px;
+    font-size: 0.875rem;
+  }
+  .screen-plans-search input:-ms-input-placeholder {
+    font-size: 14px;
+    font-size: 0.875rem;
+  }
+  .screen-plans-search input::-ms-input-placeholder {
+    font-size: 14px;
+    font-size: 0.875rem;
+  }
+  .screen-plans-search input::placeholder {
+    font-size: 14px;
+    font-size: 0.875rem;
+  }
+}
+@media (max-width: 480px) {
+  .screen-plans-search input::-webkit-input-placeholder {
+    font-size: 11px;
+    font-size: 0.6875rem;
+  }
+  .screen-plans-search input::-moz-placeholder {
+    font-size: 11px;
+    font-size: 0.6875rem;
+  }
+  .screen-plans-search input:-ms-input-placeholder {
+    font-size: 11px;
+    font-size: 0.6875rem;
+  }
+  .screen-plans-search input::-ms-input-placeholder {
+    font-size: 11px;
+    font-size: 0.6875rem;
+  }
+  .screen-plans-search input::placeholder {
+    font-size: 11px;
+    font-size: 0.6875rem;
+  }
+}
 .screen-plans-search button {
   height: 57px;
   padding: 16px 24px;
@@ -3587,10 +3657,16 @@ img {
     padding: 16px 24px;
   }
 }
+@media (max-width: 599px) {
+  .screen-plans-search button {
+    height: 50px;
+    padding: 13px 18px;
+  }
+}
 @media (max-width: 480px) {
   .screen-plans-search button {
-    height: 47px;
-    padding: 11px 18px;
+    height: 40px;
+    padding: 9px 10px;
     border-radius: 0px 8px 8px 0px;
   }
 }
@@ -3614,6 +3690,17 @@ img {
   .screen-plans-search button img {
     width: 24px;
     height: 24px;
+  }
+}
+@media (max-width: 480px) {
+  .screen-plans-search button img {
+    width: 20px;
+    height: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .screen-plans .jq-selectbox__select-text {
+    display: none;
   }
 }
 .screen-plans .jq-selectbox.jqselect {
@@ -3654,14 +3741,26 @@ img {
     height: 57px;
     width: 200px;
     margin-left: 0;
+    width: 57px;
+  }
+}
+@media (max-width: 599px) {
+  .screen-plans .jq-selectbox.jqselect {
+    font-size: 14px;
+    font-size: 0.875rem;
+    height: 50px;
+    width: 50px;
+    line-height: 50px;
+    border-radius: 8px;
   }
 }
 @media (max-width: 480px) {
   .screen-plans .jq-selectbox.jqselect {
     font-size: 14px;
     font-size: 0.875rem;
-    height: 47px;
-    line-height: 47px;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
     border-radius: 8px;
   }
 }
@@ -3683,6 +3782,24 @@ img {
   .screen-plans .jq-selectbox__select {
     padding-left: 16px;
     padding-right: 16px;
+  }
+}
+@media (max-width: 768px) {
+  .screen-plans .jq-selectbox__select {
+    padding-left: 19px;
+    padding-top: 19px;
+  }
+}
+@media (max-width: 599px) {
+  .screen-plans .jq-selectbox__select {
+    padding-left: 15px;
+    padding-top: 15px;
+  }
+}
+@media (max-width: 480px) {
+  .screen-plans .jq-selectbox__select {
+    padding-left: 12px;
+    padding-top: 12px;
   }
 }
 .screen-plans .jq-selectbox__trigger {
@@ -3708,6 +3825,12 @@ img {
     height: 16px;
   }
 }
+@media (max-width: 768px) {
+  .screen-plans .jq-selectbox__trigger-arrow {
+    background-image: url(../images/sort-_icon.svg);
+    background-size: bottom center;
+  }
+}
 .screen-plans .jq-selectbox__dropdown {
   border: 1px solid #607367;
   min-width: 100%;
@@ -3720,6 +3843,8 @@ img {
   width: max-content !important;
 }
 .screen-plans .jq-selectbox li {
+  text-align: left;
+  text-transform: uppercase;
   cursor: pointer;
 }
 .screen-plans .jq-selectbox li:hover {
@@ -3743,6 +3868,28 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-top: 170px;
+  padding-bottom: 70px;
+  height: unset;
+  min-height: 100vh;
+}
+@media (max-width: 1366px) {
+  .screen-about-contest {
+    padding-top: 124px;
+    padding-bottom: 36px;
+  }
+}
+@media (max-width: 1280px) {
+  .screen-about-contest {
+    padding-top: 124px;
+    padding-bottom: 36px;
+  }
+}
+@media (max-width: 960px) {
+  .screen-about-contest {
+    padding-top: 97px;
+    padding-bottom: 36px;
+  }
 }
 .screen-about-contest .container {
   width: 100%;
@@ -3943,6 +4090,34 @@ img {
   .screen-about-contest__cards {
     max-width: 62%;
   }
+  .screen-about-contest__cards .row {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+  .screen-about-contest__cards [class*=col-] {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media (max-width: 1280px) {
+  .screen-about-contest__cards .row {
+    margin-left: -8px;
+    margin-right: -8px;
+  }
+  .screen-about-contest__cards [class*=col-] {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+}
+@media (max-width: 1280px) {
+  .screen-about-contest__cards .row {
+    margin-left: -6px;
+    margin-right: -6px;
+  }
+  .screen-about-contest__cards [class*=col-] {
+    padding-left: 6px;
+    padding-right: 6px;
+  }
 }
 @media (max-width: 960px) {
   .screen-about-contest__cards .row {
@@ -4126,6 +4301,12 @@ img {
     height: 26px;
   }
 }
+@media (max-width: 768px) {
+  .screen-about-contest__cards .card-item-images__image {
+    width: 34px;
+    height: 34px;
+  }
+}
 .screen-about-contest__cards .card-item-images__image:last-child {
   background-color: #BC8654;
   cursor: pointer;
@@ -4168,6 +4349,12 @@ img {
     height: 26px;
   }
 }
+@media (max-width: 768px) {
+  .screen-about-contest__cards .card-item-images__image img {
+    width: 34px;
+    height: 34px;
+  }
+}
 .screen-about-contest__cards .card-item-images__image span {
   position: absolute;
   top: 50%;
@@ -4202,6 +4389,12 @@ img {
   .screen-about-contest__cards .card-item-images__image span {
     font-size: 14px;
     font-size: 0.875rem;
+  }
+}
+@media (max-width: 768px) {
+  .screen-about-contest__cards .card-item-images__image span {
+    font-size: 16px;
+    font-size: 1rem;
   }
 }
 .screen-about-contest-bg {
@@ -4327,6 +4520,13 @@ img {
 @media (max-width: 1140px) {
   .screen-about-contest .ticket {
     max-height: 90px;
+    top: -114px;
+  }
+}
+@media (max-width: 992px) {
+  .screen-about-contest .ticket {
+    max-height: 80px;
+    top: -100px;
   }
 }
 @media (max-width: 768px) {
@@ -4342,6 +4542,26 @@ img {
 
 .screen-plans-cards {
   color: #23372B;
+}
+@media (max-width: 768px) {
+  .screen-plans-cards .row {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
+  .screen-plans-cards [class*=col-] {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media (max-width: 480px) {
+  .screen-plans-cards .row {
+    margin-left: -8px;
+    margin-right: -8px;
+  }
+  .screen-plans-cards [class*=col-] {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
 }
 .screen-plans-cards__wrapper {
   -webkit-transform: rotate(-2deg);
@@ -4390,6 +4610,20 @@ img {
     margin-bottom: 25px;
   }
 }
+@media (max-width: 1680px), (max-height: 900px) {
+  .screen-plans-cards .screen-plans-item {
+    padding-right: 15px;
+    padding-left: 15px;
+    padding-top: 25px;
+    padding-bottom: 15px;
+    margin-bottom: 25px;
+  }
+}
+@media (max-width: 768px) {
+  .screen-plans-cards .screen-plans-item {
+    margin-bottom: 16px;
+  }
+}
 .screen-plans-cards .screen-plans-item__likes {
   position: absolute;
   top: 8px;
@@ -4424,6 +4658,16 @@ img {
     max-width: 18px;
   }
 }
+@media (max-width: 480px) {
+  .screen-plans-cards .screen-plans-item__likes {
+    font-size: 13px;
+    font-size: 0.8125rem;
+    padding: 2px 8px;
+  }
+  .screen-plans-cards .screen-plans-item__likes img {
+    max-width: 14px;
+  }
+}
 .screen-plans-cards .screen-plans-item__likes p {
   margin: 0;
   margin-right: 10px;
@@ -4453,6 +4697,8 @@ img {
   border-radius: 50%;
   overflow: hidden;
   margin-right: 12px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 @media (max-width: 1366px) {
   .screen-plans-cards .screen-plans-item__image {
@@ -4468,14 +4714,14 @@ img {
 }
 @media (max-width: 768px) {
   .screen-plans-cards .screen-plans-item__image {
-    width: 38px;
-    height: 38px;
+    width: 30px;
+    height: 30px;
   }
 }
 @media (max-width: 480px) {
   .screen-plans-cards .screen-plans-item__image {
-    width: 26px;
-    height: 26px;
+    width: 22px;
+    height: 22px;
   }
 }
 .screen-plans-cards .screen-plans-item__title {
@@ -4503,14 +4749,14 @@ img {
 }
 @media (max-width: 768px) {
   .screen-plans-cards .screen-plans-item__title {
-    font-size: 26px;
-    font-size: 1.625rem;
+    font-size: 22px;
+    font-size: 1.375rem;
   }
 }
 @media (max-width: 480px) {
   .screen-plans-cards .screen-plans-item__title {
-    font-size: 20px;
-    font-size: 1.25rem;
+    font-size: 18px;
+    font-size: 1.125rem;
   }
 }
 .screen-plans-cards .screen-plans-item__count {
@@ -4533,14 +4779,14 @@ img {
 }
 @media (max-width: 768px) {
   .screen-plans-cards .screen-plans-item__count {
-    font-size: 22px;
-    font-size: 1.375rem;
+    font-size: 18px;
+    font-size: 1.125rem;
   }
 }
 @media (max-width: 480px) {
   .screen-plans-cards .screen-plans-item__count {
-    font-size: 18px;
-    font-size: 1.125rem;
+    font-size: 12px;
+    font-size: 0.75rem;
   }
 }
 .screen-plans-cards .screen-plans-item__text {
@@ -4579,14 +4825,14 @@ img {
 }
 @media (max-width: 768px) {
   .screen-plans-cards .screen-plans-item__text {
-    font-size: 13px;
-    font-size: 0.8125rem;
+    font-size: 12px;
+    font-size: 0.75rem;
   }
 }
 @media (max-width: 480px) {
   .screen-plans-cards .screen-plans-item__text {
-    font-size: 11px;
-    font-size: 0.6875rem;
+    font-size: 10px;
+    font-size: 0.625rem;
   }
 }
 .screen-plans-cards .screen-plans-item__more {
@@ -4617,14 +4863,14 @@ img {
 }
 @media (max-width: 768px) {
   .screen-plans-cards .screen-plans-item__more {
-    font-size: 14px;
-    font-size: 0.875rem;
+    font-size: 11px;
+    font-size: 0.6875rem;
   }
 }
 @media (max-width: 480px) {
   .screen-plans-cards .screen-plans-item__more {
-    font-size: 12px;
-    font-size: 0.75rem;
+    font-size: 9px;
+    font-size: 0.5625rem;
   }
 }
 .screen-plans-cards .screen-plans-pagination {
@@ -4658,11 +4904,13 @@ img {
   }
 }
 @media (max-width: 768px) and (max-width: 480px) {
+  .screen-plans-cards .screen-plans-pagination {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   .screen-plans-cards .screen-plans-pagination .pagination__arrows {
     display: none;
-  }
-  .screen-plans-cards .screen-plans-pagination .ui-btn {
-    bottom: -60px;
   }
 }
 
@@ -4738,6 +4986,11 @@ img {
     padding: 20px 20px 28px;
   }
 }
+@media (max-height: 900px) {
+  .screen-contest-form form {
+    padding: 40px 40px 58px;
+  }
+}
 .screen-contest-form form .h2 {
   width: 100%;
   color: #23372B;
@@ -4808,6 +5061,9 @@ img {
     margin-bottom: 20px;
   }
 }
+.screen-contest-form form label.error {
+  color: #FC8585;
+}
 .screen-contest-form-left {
   width: 50%;
   padding-right: 20px;
@@ -4827,11 +5083,7 @@ img {
   .screen-contest-form-left {
     padding-right: 0;
     width: 100%;
-  }
-}
-@media (max-width: 420px) {
-  .screen-contest-form-left {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 }
 .screen-contest-form-left input {
@@ -4845,6 +5097,10 @@ img {
   border-radius: 10px;
   border: 1px solid rgba(94, 103, 56, 0.5);
   outline: none;
+  margin-bottom: 20px;
+}
+.screen-contest-form-left input.error {
+  margin-bottom: 0px;
 }
 @media (max-width: 1366px) {
   .screen-contest-form-left input {
@@ -4853,11 +5109,19 @@ img {
     padding: 18px 26px;
   }
 }
+@media (max-width: 1024px) {
+  .screen-contest-form-left input {
+    font-size: 12px;
+    font-size: 0.75rem;
+    padding: 12px 20px;
+  }
+}
 @media (max-width: 992px) {
   .screen-contest-form-left input {
     font-size: 12px;
     font-size: 0.75rem;
     padding: 12px 20px;
+    margin-bottom: 10px;
   }
 }
 @media (max-width: 768px) {
@@ -4891,14 +5155,6 @@ img {
 }
 .screen-contest-form-left input.error {
   border-color: #FC8585;
-}
-.screen-contest-form-left input + input {
-  margin-top: 20px;
-}
-@media (max-width: 992px) {
-  .screen-contest-form-left input + input {
-    margin-top: 10px;
-  }
 }
 .screen-contest-form-right {
   width: 50%;
@@ -4943,6 +5199,13 @@ img {
     padding: 18px 26px;
   }
 }
+@media (max-width: 1024px) {
+  .screen-contest-form-right textarea {
+    font-size: 12px;
+    font-size: 0.75rem;
+    padding: 12px 20px;
+  }
+}
 @media (max-width: 992px) {
   .screen-contest-form-right textarea {
     font-size: 12px;
@@ -4955,7 +5218,6 @@ img {
     font-size: 18px;
     font-size: 1.125rem;
     padding: 18px 26px;
-    min-height: 140px;
   }
 }
 @media (max-width: 480px) {
@@ -4963,7 +5225,6 @@ img {
     font-size: 12px;
     font-size: 0.75rem;
     padding: 12px 20px;
-    min-height: 120px;
   }
 }
 .screen-contest-form-right textarea::-webkit-input-placeholder {
