--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1094,11 +1094,24 @@
   background-position: center;
   background-size: cover;
   height: 100vh;
-  // padding-top: 46px;
   display: flex;
   align-items: center;
+
+  padding-top: 70px;
+  padding-bottom: 70px;
+  height: unset;
+  min-height: 100vh;
+  @media (max-width: 1366px)  {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  @media (max-width: 1280px) {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
   @media (max-width: 768px) {
-    display: inherit;
+    // display: inherit;
     padding-top: 30px;
   }
   @media (max-width: 480px) {
@@ -1119,6 +1132,10 @@
       margin-bottom: 24px;
     }
     @media (max-width: 768px) {
+      gap: 20px;
+      margin-bottom: 40px;
+    }
+    @media (max-width: 480px) {
       flex-wrap: wrap;
     }
     
@@ -1141,10 +1158,10 @@
       @include fz(42);
     }
     @media (max-width: 768px) {
-      margin-bottom: 30px;
+      // margin-bottom: 30px;
     }
     @media (max-width: 480px) {
-      margin-bottom: 20px;
+      // margin-bottom: 20px;
       @include fz(36);
     }
   }
@@ -1155,7 +1172,10 @@
     @media (max-width: 768px) {
       // margin-left: 20px;
       width: 100%;
-      margin-bottom: 20px;
+      // margin-bottom: 20px;
+    }
+    @media (max-width: 480px) {
+      width: 80%;
     }
     input {
       width: 415px;
@@ -1191,13 +1211,17 @@
         height: 57px;
         @include fz(17);
       }
+      @media (max-width: 599px) {       
+        height: 50px;
+        @include fz(14);
+      }
       @media (max-width: 480px) {
-        height: 47px;
+        height: 40px;
         padding: 18px 10px;
         border-radius: 8px 0px 0px 8px;       
-        @include fz(14);      
-        padding-left: 20px;
-        padding-right: 20px;
+        @include fz(11);      
+        padding-left: 10px;
+        padding-right: 10px;
       }
 
       &::placeholder {
@@ -1214,6 +1238,12 @@
         }
         @media (max-width: 768px) {      
           @include fz(17);
+        }
+        @media (max-width: 599px) {
+          @include fz(14);
+        }
+        @media (max-width: 480px) {
+          @include fz(11);
         }
       }
     }
@@ -1240,9 +1270,13 @@
          height: 57px;
          padding: 16px 24px;
       }
+      @media (max-width: 599px) {
+        height: 50px;
+        padding: 13px 18px;
+      }
       @media (max-width: 480px) {
-        height: 47px;
-        padding: 11px 18px;
+        height: 40px;
+        padding: 9px 10px;
         border-radius: 0px 8px 8px 0px;
       }
       img {
@@ -1260,6 +1294,10 @@
           width: 24px;
           height: 24px;
         }
+        @media (max-width: 480px) {
+          width: 20px;
+          height: 20px;
+        }
       }    
     }    
   }
@@ -1267,6 +1305,12 @@
   // &-select {
   //   width: 200px;
   // }
+
+  .jq-selectbox__select-text {
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
 
   .jq-selectbox.jqselect {
     @include fz(17);
@@ -1296,11 +1340,20 @@
       height: 57px;
       width: 200px;
       margin-left: 0;
+      width: 57px;
+    }
+    @media (max-width: 599px) {
+      @include fz(14);
+      height: 50px;
+      width: 50px;
+      line-height: 50px;
+      border-radius: 8px;
     }
     @media (max-width: 480px) {
       @include fz(14);
-      height: 47px;
-      line-height: 47px;
+      height: 40px;
+      width: 40px;
+      line-height: 40px;
       border-radius: 8px;
     }
   }
@@ -1316,6 +1369,19 @@
       padding-left: 16px;
       padding-right: 16px;
     }
+    @media (max-width: 768px) {
+      padding-left: 19px;
+      padding-top: 19px;
+    }
+    @media (max-width: 599px) {
+      padding-left: 15px;
+      padding-top: 15px;
+    }
+    @media (max-width: 480px) {
+      padding-left: 12px;
+      padding-top: 12px;
+    }
+
   }
 
   .jq-selectbox__trigger {
@@ -1337,6 +1403,11 @@
       width: 16px;
       height: 16px;
     }
+    @media (max-width: 768px) {
+      background-image: url(../images/sort-_icon.svg);
+      background-size: bottom center;
+
+    }
   }
   
 
@@ -1351,6 +1422,8 @@
   }
 
   .jq-selectbox li {
+    text-align: left;
+    text-transform: uppercase;
     cursor: pointer;
     &:hover {
       opacity: 0.8;
@@ -1366,11 +1439,29 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  // padding-top: 200px;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  padding-top: 170px;
+  padding-bottom: 70px;
+  height: unset;
+  min-height: 100vh;
+
+
+@media (max-width: 1366px) {
+    padding-top: 124px;
+    padding-bottom: 36px;
+  }
+  @media (max-width: 1280px) {
+    padding-top: 124px;
+    padding-bottom: 36px;
+  }
+  @media (max-width: 960px) {
+    padding-top: 97px;
+    padding-bottom: 36px;
+  }  
+
   .container {
     width: 100%;
   }
@@ -1518,6 +1609,35 @@
     max-width: 68%;
     @media (max-width: 1366px) {
       max-width: 62%;
+      .row {
+        margin-left: -10px;
+        margin-right: -10px;
+      }
+      [class*=col-] {
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+    }
+
+    @media (max-width: 1280px) {
+      .row {
+        margin-left: -8px;
+        margin-right: -8px;
+      }
+      [class*=col-] {
+        padding-left: 8px;
+        padding-right: 8px;
+      }
+    }
+    @media (max-width: 1280px) {
+      .row {
+        margin-left: -6px;
+        margin-right: -6px;
+      }
+      [class*=col-] {
+        padding-left: 6px;
+        padding-right: 6px;
+      }
     }
 
     @media (max-width: 960px) {
@@ -1643,6 +1763,10 @@
             width: 26px;
             height: 26px;
           }
+          @media (max-width: 768px) {
+            width: 34px;
+            height: 34px;
+          }
           &:last-child {
             background-color: #BC8654;
             cursor: pointer;
@@ -1675,6 +1799,10 @@
               width: 26px;
               height: 26px;
             }
+            @media (max-width: 768px) {
+              width: 34px;
+              height: 34px;             
+            }
           }
           span {
             position: absolute;
@@ -1696,6 +1824,9 @@
             }
             @media (max-width: 1140px) {
               @include fz(14);
+            }
+            @media (max-width: 768px) {
+              @include fz(16);
             }
           }
         }
@@ -1865,6 +1996,11 @@
     }
     @media (max-width: 1140px) {
       max-height: 90px;
+      top: -114px;
+    }
+    @media (max-width: 992px) {
+      max-height: 80px;
+      top: -100px;
     }
     @media (max-width: 768px) {
       display: none;
@@ -1877,6 +2013,27 @@
 
 .screen-plans-cards {
   color: #23372B;
+
+  @media (max-width: 768px) {
+    .row {
+      margin-left: -10px;
+      margin-right: -10px;
+    }
+    [class*=col-] {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  }
+  @media (max-width: 480px) {
+    .row {
+      margin-left: -8px;
+      margin-right: -8px;
+    }
+    [class*=col-] {
+      padding-left: 8px;
+      padding-right: 8px;
+    }
+  }
   &__wrapper {
     transform: rotate(-2deg);
     &:nth-child(odd) {
@@ -1914,12 +2071,20 @@
         padding-bottom: 15px;
         margin-bottom: 25px;
       }
-      @media (max-width: 480px) {
+
+      @media (max-width: 1680px), (max-height: 900px) {
+        padding-right: 15px;
+        padding-left: 15px;
+        padding-top: 25px;
+        padding-bottom: 15px;
+        margin-bottom: 25px;
+      }
+      @media (max-width: 768px) {
         // padding-right: 10px;
         // padding-left: 10px;
         // padding-top: 20px;
         // padding-bottom: 10px;
-        // margin-bottom: 20px;
+        margin-bottom: 16px;
       }
       &__likes {
         position: absolute;
@@ -1941,6 +2106,15 @@
 
           img {
             max-width: 18px;
+          }
+        }
+
+        @media (max-width: 480px) {
+          @include fz(13);
+          padding: 2px 8px;
+
+          img {
+            max-width: 14px;
           }
         }
 
@@ -1967,7 +2141,8 @@
         height: 38px;
         border-radius: 50%;
         overflow: hidden;
-        margin-right: 12px;     
+        margin-right: 12px;   
+        flex-shrink: 0;  
         @media (max-width: 1366px) {
           width: 32px;
           height: 32px;
@@ -1977,12 +2152,12 @@
           height: 26px;
         }
         @media (max-width: 768px) {
-          width: 38px;
-          height: 38px;
+          width: 30px;
+          height: 30px;
         }
         @media (max-width: 480px) {
-          width: 26px;
-          height: 26px;
+          width: 22px;
+          height: 22px;
         }
       }
       &__title {
@@ -2000,10 +2175,10 @@
           @include fz(16);
         }
         @media (max-width: 768px) {
-          @include fz(26);
+          @include fz(22);
         }
         @media (max-width: 480px) {
-          @include fz(20);
+          @include fz(18);
         }
       }
       &__count {
@@ -2017,10 +2192,10 @@
           @include fz(14);
         }    
         @media (max-width: 768px) {
-          @include fz(22);
+          @include fz(18);
         }  
         @media (max-width: 480px) {
-          @include fz(18);
+          @include fz(12);
         }  
       }
       &__text {
@@ -2047,10 +2222,10 @@
           @include fz(9);
         }
         @media (max-width: 768px) {
-          @include fz(13);
+          @include fz(12);
         }
         @media (max-width: 480px) {
-          @include fz(11);
+          @include fz(10);
         }
       }
       &__more {
@@ -2069,10 +2244,10 @@
           @include fz(8);
         }
         @media (max-width: 768px) {
-          @include fz(14);
+          @include fz(11);
         }
         @media (max-width: 480px) {
-          @include fz(12);
+          @include fz(9);
         }
       }
     }
@@ -2093,11 +2268,12 @@
           transform: translateX(-50%);
         }
         @media (max-width: 480px) {
+          justify-content: center;
           .pagination__arrows {
             display: none;            
           }
           .ui-btn {            
-            bottom: -60px;
+            // bottom: -60px;
           }
         }        
       }
@@ -2154,6 +2330,9 @@
     @media (max-width: 420px) {
       padding: 20px 20px 28px;
     }
+    @media  (max-height: 900px) {
+      padding: 40px 40px 58px;
+    }
 
     .h2 {
       width: 100%;
@@ -2200,6 +2379,10 @@
         margin-bottom: 20px;
       }
     }
+
+    label.error {
+      color: $error;      
+    }
   }
 
   &-left {
@@ -2215,10 +2398,9 @@
     @media (max-width: 768px) {
       padding-right: 0;
       width: 100%;
+      margin-bottom: 10px;
     }
-    @media (max-width: 420px) {
-      margin-bottom: 20px;
-    }
+    
     input {
       color: $bgc;
       @include fz(18);      
@@ -2229,14 +2411,23 @@
       border-radius: 10px;
       border: 1px solid rgba(94, 103, 56, 0.50);
       outline: none;     
+      margin-bottom: 20px;    
+      &.error {
+        margin-bottom: 0px;
+      }  
 
       @media (max-width: 1366px) {
         @include fz(14); 
         padding: 18px 26px;
       }
+      @media (max-width: 1024px) {
+        @include fz(12); 
+        padding: 12px 20px;
+      }
       @media (max-width: 992px) {
         @include fz(12); 
         padding: 12px 20px;
+        margin-bottom: 10px;
       }
       @media (max-width: 768px) {
         @include fz(18); 
@@ -2254,12 +2445,12 @@
       }
     }
 
-    input + input {
-      margin-top: 20px;
-      @media (max-width: 992px) {
-        margin-top: 10px;
-      }
-    }
+    // input + input {
+    //   margin-top: 20px;
+    //   @media (max-width: 992px) {
+    //     margin-top: 10px;
+    //   }
+    // }
   }
   &-right {
     width: 50%;
@@ -2292,6 +2483,10 @@
         @include fz(14); 
         padding: 18px 26px;
       }   
+      @media (max-width: 1024px) {
+        @include fz(12); 
+        padding: 12px 20px;
+      }
       @media (max-width: 992px) {
         @include fz(12); 
         padding: 12px 20px;
@@ -2299,12 +2494,12 @@
       @media (max-width: 768px) {
         @include fz(18); 
         padding: 18px 26px;
-        min-height: 140px;
+        // min-height: 90px;
       }
       @media (max-width: 480px) {
         @include fz(12); 
         padding: 12px 20px;
-        min-height: 120px;
+        // min-height: 80px;
       }
       &::placeholder {
         color: $bgc;
